--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,8 @@
 <div class="ui container"><br>
 <div class="ui segment"><h1>Project BigBrain: Boards</h1></div>
 {{!-- Feel free to remove this! --}}
-<div class="ui segment"><h3>Developers List</h3></div>
+<div class="ui segment"><h3>Developers List</h3>
+{{model.developer}}
+</div>
 {{outlet}}
 </div>
