--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,8 @@
 {{!-- The following component displays Ember's default welcome message. --}}
 <div class="ui container"><br>
-<div class="ui segment"><h1>Project BigBrain: Boards</h1></div>
+  
+<div class="ui red segment"><h1>Project BigBrain: Boards</h1></div>
 {{!-- Feel free to remove this! --}}
-<div class="ui segment"><h3>Developers List</h3>
-{{model.developer}}
-</div>
+
 {{outlet}}
 </div>
