--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -1,8 +1,10 @@
 {{outlet}}
 <div class="ui red segment"><h3>Developers List</h3>
   {{#each model as |developer|}}
-    <div class="ui red inverted segment">
-      {{developer.name}} {{developer.fname}}
+    <div class="ui red inverted segment" id="devSegment">
+      {{developer.name}} {{developer.fname}} <div class="ui icon button" id="deleteDevButton">
+  <i class="delete icon"></i>
+</div>
     </div>
     {{/each}}
 </div>
