--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -1,31 +1,26 @@
 <div class="ui segment"><h3>Developers List</h3>
 
   <div class="ui input">
-    <Input @value={{identity}} placeholder="Identity" class="ui input"/>
+    <Input @value={{identity}} placeholder="Identity"/>
     <Input @value={{name}} placeholder="Name"/>
+    <Input @value={{fname}} placeholder="FirstName"/>
   </div>
 
-  <div {{action "addNew" identity name}} class="ui button">Add</div>
-
-<div style="display:none;" class="ui segment"> <!-- DIV DE TEST -->
-
-  <p>
-    {{identity}}
-    <br>
-    {{name}}
-  </p>
-</div> <!-- DIV DE TEST -->
-
-
-
+  <div {{action "addNew" identity name fname}} class="ui button">Add</div>
 
 </div>
 
 <div class="ui red segment"><h3>Developers List</h3>
   {{#each model as |developer|}}
     <div class="ui red inverted segment">
-      {{developer.name}} {{developer.fname}}
+      {{developer.identity}}
+      {{developer.name}}
+      {{developer.fname}}
+
+      <div {{action "edit" identity name fname}} style="float:right;" class="ui button">Edit</div>
+      <div {{action "remove" developer}} style="float:right;" class="ui button">Remove</div>
     </div>
+
     {{/each}}
 </div>
 
