--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -2,16 +2,29 @@
 
 {{#each model as |project|}}
 
-<div class="ui horizontal segments">
+<div class="ui horizontal segments"><br>
 
-   <div class="ui green segment">
-     {{project.name}}
-   </div>
 
-   <div class="ui green segment">
-    {{project.descriptif}}
-   </div>
-
+<table class="ui definition table" style="margin:1%;">
+ <tbody>
+   <tr>
+     <td class="two wide column">Name</td>
+     <td>{{project.name}}</td>
+   </tr>
+   <tr>
+     <td>Description</td>
+     <td>{{project.descriptif}}</td>
+   </tr>
+   <tr>
+     <td>Start Date</td>
+     <td>{{project.startDate}}</td>
+   </tr>
+   <tr>
+     <td>Due Date</td>
+     <td>{{project.dueDate}}</td>
+   </tr>
+ </tbody>
+</table><br>
  </div>
 
    {{/each}}
