--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -2,10 +2,7 @@
 
 {{#each model as |project|}}
 
-<div class="ui horizontal segments"><br>
-
-
-<table class="ui definition table" style="margin:1%;">
+<table class="ui definition green table">
  <tbody>
    <tr>
      <td class="two wide column">Name</td>
@@ -24,8 +21,8 @@
      <td>{{project.dueDate}}</td>
    </tr>
  </tbody>
-</table><br>
- </div>
+</table>
+
 
    {{/each}}
 
