--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -20,6 +20,14 @@
      <td>Due Date</td>
      <td>{{project.dueDate}}</td>
    </tr>
+   <tr>
+     <td>Actions</td>
+     <td>
+       <div class="ui button">Delete</div>
+       <div class="ui button">Edit</div>
+       <div class="ui button">Developers</div>
+     </td>
+   </tr>
  </tbody>
 </table>
 
