--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -1,11 +1,6 @@
 <div class="ui segment"><h3>Add Developer</h3>
 
-<!--<div id="openForm" class="ui button">
-Add one
-</div>
--->
-
-<div style="/*display:none;*/" class="ui form">
+<div class="ui form">
   <div class="fields">
     <div class="field">
       <label>Pseudo</label>
@@ -77,23 +72,6 @@ $(document).ready(function(){
                         }
                     })
                 ;
-
-
-/* FAIS APPARAITRE LE FORMULAIRE LORS DU CLIQUE SUR LE BOUTON */
-/*
-                $('#openForm').on('click',function(){
-                  $('.ui.form').css('display', 'block');
-                  $('#openForm').css('display', 'none');
-
-                }); // on click
-
-                $('#closeForm').on('click',function(){
-                  $('.ui.form').css('display', 'none');
-                  $('#openForm').css('display', 'inline');
-*/
-
-                }); // on click
-
             }); /* FUNCTION */
 </script>
 
