--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -1,15 +1,17 @@
 <div class="ui segment"><h3>Projects List</h3>
 
   <div class="ui form">
-    <div class="fields">
+    <div class="two fields">
       <div class="field">
         <label>Name</label>
         <Input @value={{name}} name="name" placeholder="Name" class="ui input"/>
       </div>
       <div class="field">
-        <label>Descriptif</label>
+        <label>Description</label>
         <Input @value={{descriptif}} name="description" placeholder="Description" class="ui input"/>
       </div>
+    </div>
+      <div class="two fields">
       <div class="field">
         <label>Start date</label>
         <Input @value={{startDate}} type="date" name="dateT" placeholder="Y-M-D" class="ui input"/>
@@ -19,6 +21,7 @@
         <Input @value={{dueDate}} type="date" name="dateD" placeholder="Y-M-D" class="ui input"/>
       </div>
     </div>
+
     <div class="ui error message"></div>
     <div {{action "addNew" name descriptif startDate dueDate}} id="closeForm" class="ui submit button">Add</div>
   </div> <!-- UI FORM -->
@@ -48,7 +51,7 @@
    <tr>
      <td>Actions</td>
      <td>
-       <div class="ui button" id="btnModalDelete">Delete</div>
+       <div class="ui button" {{action "remove" project}}>Delete</div>
        <div class="ui button">Edit</div>
        <div class="ui button" id="btnModalStory">Story</div>
      </td>
@@ -88,7 +91,8 @@ $('#btnModalDelete').click(function() {
 $(".ui.modal.story").modal({
 		closable: true
 	});
-
+</script>
+<script>
 $(document).ready(function(){
                   $('.ui.form')
                       .form({
