--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -29,7 +29,7 @@
         {{developer.identity}}
         {{developer.name}}
         {{developer.fname}}
-          <div style="float:right;" class="ui green button">Edit</div>
+          <a style="float:right;" class="ui green button" href="/developers/edit">Edit</a>
           <div {{action "remove" developer}} style="float:right;" class="ui red button">Remove</div>
           <br>
           <br>
