--- a/app/templates/projects/new.hbs
+++ b/app/templates/projects/new.hbs
@@ -1,1 +1,52 @@
+<div class="ui message attached icon">
+    <i class="close icon" {{action 'backToProj'}}></i>
+    <div class="content">
+        <div class="header">
+            Add project
+        </div>
+    </div>
+</div>
+<div class="ui form attached fluid segment">
+  <div class="two fields">
+
+      <div class="ui fluid labeled input field" data-children-count="1">
+          <div class="ui label">
+              Name
+          </div>
+          <Input type="text" @value={{model.name}} placeholder="Name" />
+      </div>
+  </div>
+  <div class="two fields">
+        <div class="ui fluid labeled input field" data-children-count="1">
+            <div class="ui label">
+                Description
+            </div>
+            <Input type="text" @value={{model.descriptif}} placeholder="Description" />
+        </div>
+    </div>
+    <div class="two fields">
+        <div class="ui fluid labeled input field" data-children-count="1">
+            <div class="ui label">
+                Start date
+            </div>
+            <Input @value={{model.startDate}} type="date" name="dateD" placeholder="Y-M-D" class="ui input"/>
+        </div>
+    </div>
+	<div class="two fields">
+        <div class="ui fluid labeled input field" data-children-count="1">
+            <div class="ui label">
+                Due date
+            </div>
+            <Input @value={{model.dueDate}} type="date" name="dateE" placeholder="Y-M-D" class="ui input"/>
+        </div>
+    </div>
+
+</div>
+<div class="ui bottom attached message">
+    <button class="ui button inverted positive icon" {{action 'addNew' model}}><i class="check circle icon" />
+        Validate</button>
+    <button class="ui button inverted red icon" {{action 'backToProj'}}><i
+            class="icon times circle outline" /> Cancel</button>
+</div>
+<div class="ui divider" />
 {{outlet}}
