--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -9,7 +9,7 @@
         {{developer.name}}
         {{developer.fname}}
 
-          <div {{action "remove" developer}} class="ui vertical animated red button" tabindex="0" style="float:right;">
+          <div {{action "confirmDelete" model developer}} class="ui vertical animated red button" tabindex="0" style="float:right;">
           <div class="hidden content">Delete</div>
           <div class="visible content">
           <i class="trash alternate icon"></i>
@@ -27,7 +27,23 @@
     </div>
 
     {{/each}}
-
+    
+    <!-- Valider la suppression -->
+    <div class="ui modal delete">
+      <div class="header">Do you want delete {{model.toDelete.name}} ?</div>
+      <div class="content">
+        <div class="description">
+          <div class="actions">
+           <div {{action "remove" model.toDelete}} class="ui green deny button">
+                 Yes
+           </div>
+           <div class="ui red deny button">
+                 No
+           </div>
+        </div>
+      </div>
+    </div>
+    </div>
 
 <div class="ui divider"/>
 <div class="ui segment" style="text-align: center;">
