--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -4,9 +4,11 @@
     <LinkTo class="ui green button" style="float:right;" @route="projects.new">Add</LinkTo>
 
   <h3>Projects List</h3>
-    
+   
 <div class="ui segment">
-{{#each model as |project|}}
+{{#each this.model.projects as |project|}}
+
+{{model.project}}
 
 <table class="ui definition green table">
  <tbody>
@@ -26,10 +28,17 @@
      <td>Due Date</td>
      <td>{{project.dueDate}}</td>
    </tr>
+   
+   <tr>
+     <td>Owner</td>
+     <td>{{project.owner}}</td>
+   </tr>
+
    <tr>
      <td>Actions</td>
      <td>
-       <div class="ui red button" {{action "confirmDelete" model project}}>Delete</div>
+       <!--<div class="ui red button" {{action "confirmDelete" model project}}>Delete</div>-->
+       <div class="ui red button" {{action "remove" project}}>Delete (temp)</div>
        <LinkTo class="ui green button" @route="projects.edit" @model={{project.id}}>Edit</LinkTo>
           <br>
           <br>
